# SGBD

./: CMakeLists.txt
include/: database.h  fileOperations.h  row.h  table.h  userInteraction.h  utils.h  utilsFileOperations.h  utilsTable.h
src/: database.c  fileOperations.c  main.c  row.c  table.c  userInteraction.c  utils.c  utilsFileOperations.c  utilsTable.c
